# LightRAG

./: .gitignore  main.py  pyproject.toml  requirements.txt
examples/: lightrag_bedrock_demo.py
lightrag/: base.py  lightrag.py  operate.py  prompt.py  utils.py
lightrag/kg/: milvus_impl.py  neo4j_impl.py
lightrag/llm/: bedrock.py
